Fixed grow animation on Safari/Firefox

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -131,10 +131,10 @@ body {
     a {
       color: $white;
       padding: 15px;
-      &:hover {
-        -webkit-animation: grow 0.5s ease-in-out infinite alternate;
-                animation: grow 0.5s ease-in-out infinite alternate;
-      }
+    }
+    .fa:hover {
+      -webkit-animation: grow 0.5s ease-in-out infinite alternate;
+      animation: grow 0.5s ease-in-out infinite alternate;
     }
   }
 }
@@ -144,13 +144,13 @@ body {
 }
 
 @-webkit-keyframes grow {
-  0% { -webkit-transform: scale(1); }
-  100% { -webkit-transform: scale(1.1); }
+  0% { -webkit-transform: scale(1); transform: scale(1); }
+  100% { -webkit-transform: scale(1.1); transform: scale(1.1); }
 }
 
 @keyframes grow {
-  0% { transform: scale(1); }
-  100% { transform: scale(1.1); }
+  0% { -webkit-transform: scale(1); transform: scale(1); }
+  100% { -webkit-transform: scale(1.1); transform: scale(1.1); }
 }
 
 /* Small devices (tablets, 768px and up) */
